# openCVX

./: .gitignore  HeaderFiles.md  README.md
src/: CMakeLists.txt  dispimg.cpp  playvideo.cpp  playvideowithtrackbar.cpp
src/ImageViewer/: ImageViewer  ImageViewer.pro  Makefile  main.cpp  mainwindow.cpp  mainwindow.h  moc_predefs.h
